# cv_robotic_grasping_without_rgbd

./: .gitignore  BACKLOG.md  PROGRESS.md  README.md  RESULTS.md
archive/attempt-1-scaffolding/: PROGRESS.md  pyproject.toml
archive/attempt-1-scaffolding/experiments/EXP-01_cog_only_baseline/: notes.md  run.py  spec.md
archive/attempt-1-scaffolding/experiments/EXP-01_cog_only_baseline/mono_depth_cache/: pcd0102.npz  pcd0104.npz  pcd0106.npz  pcd0109.npz  pcd0110.npz  pcd0114.npz  pcd0115.npz  pcd0116.npz  pcd0117.npz  pcd0118.npz  pcd0119.npz  pcd0120.npz  pcd0122.npz  pcd0123.npz  pcd0126.npz  pcd0127.npz  pcd0130.npz  pcd0134.npz  pcd0135.npz  pcd0136.npz  pcd0137.npz  pcd0139.npz  pcd0141.npz  pcd0143.npz  pcd0144.npz  pcd0146.npz  pcd0149.npz  pcd0150.npz  pcd0152.npz  pcd0157.npz  pcd0159.npz  pcd0161.npz  pcd0163.npz  pcd0164.npz  pcd0165.npz  pcd0166.npz  pcd0168.npz  pcd0171.npz  pcd0172.npz  pcd0175.npz  (+402 more)
archive/attempt-1-scaffolding/experiments/EXP-02_full_cornell_eval/: notes.md  results.json  results.json.before-fix
archive/attempt-1-scaffolding/experiments/EXP-02b_cropped_cornell_eval/: results.json  run.py
archive/attempt-1-scaffolding/experiments/EXP-02b_cropped_cornell_eval/depth_cache/: pcd0100.npz  pcd0101.npz  pcd0102.npz  pcd0103.npz  pcd0104.npz  pcd0105.npz  pcd0106.npz  pcd0107.npz  pcd0108.npz  pcd0109.npz  pcd0110.npz  pcd0111.npz  pcd0112.npz  (+872 more)
archive/attempt-1-scaffolding/experiments/EXP-AUDIT/: legacy_dataset.py  probe_angle.py  reproduce.py  reproduce_results.json  trace_tangent.py
archive/attempt-1-scaffolding/src/eval/: README.md
(+4077 files in other folders)
